# cute_framework

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  apple_make.sh  build.bat  build_2015.bat  build_2019.bat  build_bash.sh  build_emscripten.cmd  cute_framework.sln  cute_framework.vcxproj  cute_framework.vcxproj.filters  emscripten.cmd  github_release.cmd  mingw.cmd  mkdocs.yml  msvc2015.cmd  msvc2017.cmd  msvc2019.cmd  msvc2022.cmd  msvc2026.cmd  roadmap.md  run_tests.bat  snap_hrc.ps1  tests.vcxproj  tests.vcxproj.filters  todo.txt  web.cmd
.claude/: settings.json
.github/: FUNDING.yml  copilot-instructions.md
block_man/: main.cpp  serialize.cpp  serialize.h  world.cpp  world.h
cmake/: StandardProjectSettings.cmake  asyncify_remove.txt
doc/: README.md  app.md  cute_t.md  entity.txt  protocol.md  window.md
docs/: README.md  _navbar.md  _sidebar.md  api_reference.md  community_ask_for_help.md  coverpage.md  getting_started.md  header.md  index.html  index.md  introduction.md  made_with_cf.md  mariana.css  requirements.txt  samples.md  sidebar.md  topics.md  topics_and_tutorials.md
examples/: audio.cpp  audio_demo.sln  audio_demo.vcxproj
include/: cute.h  cute_a_star.h  cute_aabb_grid.h  cute_aabb_tree.h  cute_alloc.h  cute_app.h  cute_array.h  cute_aseprite_cache.h  cute_audio.h  cute_base64.h  cute_batch.h  cute_binding.h  cute_c_runtime.h  cute_circular_buffer.h  cute_client.h  cute_clipboard.h  cute_color.h  cute_concurrency.h  cute_coroutine.h  cute_crypto.h  cute_custom_sprite.h  cute_debug_printf.h  cute_defer.h  cute_defines.h  cute_dictionary.h  cute_doubly_list.h  cute_draw.h  cute_ecs.h  cute_error.h  cute_file_system.h  cute_file_system_utils.h  cute_font.h  cute_gfx.h  cute_graphics.h  cute_guid.h  cute_handle_table.h  cute_haptics.h  cute_hashtable.h  cute_https.h  cute_image.h  (+36 more)
libraries/: ckit.h
pong/: blank.h  main.cpp  pong_game.h  pong_global.h  pong_graphics.h  pong_utils.h
prebuilt_libs/: FindSodium.cmake
samples/: 9_slice.c  CMakeLists.txt  basic_camera.c  basic_ecs.cpp  basic_indexed_rendering.c  basic_input.c  basic_instancing.c  basic_instancing_vs.shd  basic_instancing_vs_shd.h  basic_serialization.c  basic_shapes.cpp  basic_sprite.cpp  blend_modes.cpp  canvas_readback.c  canvas_readback.cpp  clay.c  clay.h  clay_ui_animations.c  compute.c  custom_shapes.cpp  custom_sprite.c  docs_parser.cpp  draw_lists.cpp  draw_to_texture.c  easy_sprite.c  echo.cpp  fetch_image.cpp  fluid_sim.cpp  font_debug.cpp  galaxy.c  glitch.cpp  hello_triangle.c  hidpi.c  hrc.c  hrc_cave.c  https.c  ime.c  imgui.c  imgui_texture.c  import_spritesheet.cpp  (+38 more)
samples/9_slice_data/: 9_slice.ase
samples/basic_indexed_rendering_data/: basic_indexed_rendering_fs.shd  basic_indexed_rendering_fs_shd.h  basic_indexed_rendering_vs.shd  basic_indexed_rendering_vs_shd.h
samples/basic_instancing_data/: basic_instancing_fs_shd.h
samples/emscripten/: shell.css  shell.html  shell.js
samples/fluid_sim_data/: fluid_sim.shd  fluid_sim_shd.h
samples/galaxy_data/: hrc_composite.c_shd  hrc_copy.c_shd  hrc_merge.c_shd
samples/hello_triangle_data/: color_fill.glsl  color_fill_shader.h  hello_triangle_fs.shd  hello_triangle_fs_shd.h  hello_triangle_vs.shd  hello_triangle_vs_shd.h  tri_fs.h  tri_vs.h
samples/hrc_cave_data/: cave_blob.shd  cave_water.shd  hrc_composite.c_shd  hrc_extend.c_shd  hrc_feedback.c_shd  hrc_merge.c_shd  hrc_minmax.c_shd  hrc_trace.c_shd
samples/hrc_data/: hrc_composite.c_shd  hrc_copy.c_shd  hrc_extend.c_shd  hrc_feedback.c_shd  hrc_merge.c_shd  hrc_minmax.c_shd  hrc_minmax_mip.c_shd  hrc_prefilter.c_shd  hrc_prefilter_gauss.c_shd  hrc_seed.c_shd  hrc_trace.c_shd
samples/metaballs_data/: metaballs.glsl  metaballs.shd  metaballs_shader.h  metaballs_shd.h  shader_shd.h
samples/pivot_data/: pivot.ase
samples/puddles_data/: puddles.glsl  puddles_shader.h  water1.ase  water3.ase
samples/recolor_data/: recolor.shd  recolor_shd.h
samples/sample_data/: sample.txt
samples/screen_shatter_data/: screen_shatter_shd.h
samples/shallow_water_data/: scene.ase  shader.h  shallow_water.glsl  shallow_water.shd  shallow_water_shader.h  shallow_water_shd.h
samples/spaceshooter/: heart.ase
samples/spaceshooter_data/: bullet_pop.ase  charge.ase  compile.cmd  explosion.ase  flash.glsl  flash.shd  flash_shader.h  flash_shd.h  ship.ase  shot.ase  shot_spawn.ase
samples/sprite_shatter_data/: sprite_shatter.shd  sprite_shatter_shd.h
samples/sprite_slice_data/: sprite_slice_shd.h
samples/waves_data/: water2.ase  waves.glsl  waves.shd  waves_shader.h  waves_shd.h
shared_libs/: libsodium.lib  mbedcrypto.lib  mbedtls.lib  mbedx509.lib  physfs.lib
snake/: main.cpp
src/: cute.cpp  cute.h  cute_a_star.cpp  cute_a_star.h  cute_aabb_grid.cpp  cute_aabb_tree.cpp  cute_alloc.cpp  cute_alloc.h  cute_app.cpp  cute_app.h  cute_app_internal.h  cute_array.cpp  cute_array.h  cute_aseprite_cache.cpp  cute_aseprite_cache.h  cute_audio.cpp  (+117 more)
test/: CMakeLists.txt  black_pixel.h  girl.h  jump.h  main.cpp  test_aabb.cpp  test_aabb_tree.cpp  test_alloc.cpp  test_app.cpp  test_array.cpp  test_array.h  test_aseprite.cpp  test_aseprite.h  test_audio.cpp  test_audio.h  test_base64.cpp  test_base64.h  test_circular_buffer.cpp  test_circular_buffer.h  test_ckit.c  test_client_server.h  test_color.cpp  test_connect_token.h  test_connect_token_cache.h  test_coroutine.cpp  test_coroutine.h  test_crypto.h  test_custom_sprite.cpp  test_datalibrary.h  test_doubly_list.cpp  test_doubly_list.h  test_draw_recycle.cpp  test_draw_tiled.cpp  test_ecs.cpp  test_ecs.h  test_encryption_map.h  test_encryption_state.h  test_font.cpp  test_font.h  test_handle.cpp  (+28 more)
test/test_data/: girl.aseprite
tools/: CMakeLists.txt  builtin_shaders.h  cute_shader.cpp  cute_shader.h  cute_shader_assert.cpp  cute_shader_ckit.cpp  cute_shaderc.cpp  cute_spirv_test.c  docs_parser.c  gen_d3d12_layout.c  generate_sample_pages.rb  update_related.py  update_samples_nav.rb
tools/single_header_packer/: hdrs.txt  pack.cmd  single_header_packer.py  srcs.txt
(+2709 files in other folders)
